--- a/ano_editor.ipynb
+++ b/ano_editor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "bc23a524",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0ad7237c",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4b4147a1",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "dbee7b3f",
    "metadata": {},
    "outputs": [
@@ -86,16 +86,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sur « Marine Le Pen » du 2024-01-01 au 2025-01-01 :\n",
-      " • 7 éditions anonymes sur 170 au total\n",
-      " • soit 4.1% d’éditions par IP/comptes non-enregistrés\n"
+      "Sur « Emmanuel Macron » du 2024-01-01 au 2025-01-01 :\n",
+      " • 0 éditions anonymes sur 428 au total\n",
+      " • soit 0.0% d’éditions par IP/comptes non-enregistrés\n"
      ]
     }
    ],
    "source": [
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    page  = \"Marine Le Pen\"\n",
+    "    page  = \"Emmanuel Macron\"\n",
     "    start = \"2024-01-01\"\n",
     "    end   = \"2025-01-01\"\n",
     "    pct, anon, tot = anon_edit_percentage(page, start, end)\n",
