Mise à jour des paramètres utilisateur et des résultats pour l'article "Victor Wembanyama"

--- a/readability.ipynb
+++ b/readability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "7342c119",
    "metadata": {},
    "outputs": [],
@@ -14,19 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "fbc22d34",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- 1. Paramètres utilisateur ---\n",
-    "article = \"Marine Le Pen\"  \n",
+    "article = \"Victor Wembanyama\"  # Nom de l'article à traduire\n",
     "lang    = \"fr\"               \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e0781179",
    "metadata": {},
    "outputs": [
@@ -34,8 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Page : {'pageid': 86757, 'ns': 0, 'title': 'Marine Le Pen', 'revisions': [{'revid': 225312137, 'parentid': 225245649}]}\n",
-      "Dernier rev_id pour « Marine Le Pen » : 225312137\n"
+      "Dernier rev_id pour « Victor Wembanyama » : 225315166\n"
      ]
     }
    ],
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "548d1a58",
    "metadata": {},
    "outputs": [],
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "51dd74b8",
    "metadata": {},
    "outputs": [],
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "8da2c09e",
    "metadata": {},
    "outputs": [
@@ -112,10 +111,10 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"rev_id\": 225312137,\n",
-      "  \"title\": \"Marine Le Pen\",\n",
-      "  \"readability_score\": 5.021496295928955,\n",
-      "  \"fk_score_proxy\": 12.98340615510051\n",
+      "  \"rev_id\": 225315166,\n",
+      "  \"title\": \"Victor Wembanyama\",\n",
+      "  \"readability_score\": 4.261152267456055,\n",
+      "  \"fk_score_proxy\": 12.360708799355464\n",
       "}\n"
      ]
     }
