Ajout du script wikipedia_scoring_pipeline.py et les fichiers py

--- a/ref.ipynb
+++ b/ref.ipynb
@@ -2,27 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "09fc5442",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Page : Sécession\n",
-      "• Passages non sourcés (templates) : 2\n",
-      "• Balises <ref> (références)        : 3\n",
-      "→ 66.7% de passages sans source\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
-    "import mwparserfromhell\n",
+    "import mwparserfromhell\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "94ee1e6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "API_URL    = \"https://fr.wikipedia.org/w/api.php\"\n",
     "USER_AGENT = \"CitationStatsBot/1.0 (mailto:ton.email@example.com)\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7307acff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def citation_stats_with_mwpfh(page_title: str):\n",
     "    # 1) Récupère le wikitexte\n",
@@ -67,7 +75,27 @@
     "        \"citation_needed\": cn_count,\n",
     "        \"references\":      ref_count,\n",
     "        \"percent_cn\":      pct\n",
-    "    }\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "342d466b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Page : Sécession\n",
+      "• Passages non sourcés (templates) : 2\n",
+      "• Balises <ref> (références)        : 3\n",
+      "→ 66.7% de passages sans source\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "if __name__ == \"__main__\":\n",
     "    page  = \"Sécession\"\n",
